<resources>
    <string name="app_name">Salesman</string>
    <string name="email_or_username">Email or Username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="agency_details">Agency Details</string>
    <string name="associated_companies">Associated Companies</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="shop_setails">Shop Details</string>
    <string name="distributors_products">Distributors/Products</string>
    <string name="search">Search</string>
    <string name="check_out">Check Out</string>
    <string name="browse">Browse Products</string>
    <string name="password">Password</string>
    <string name="min_lable">Min</string>
    <string name="max">Max</string>

    <string name="agency_details_profile">Agency Details/Profile</string>
    <string name="past_orders">Past Orders</string>
    <string name="uncovered_shops">Uncovered shops</string>
    <string name="product_type">Product Type</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="end_date_of_payment">End Date of Payment</string>
    <string name="amount">Amount</string>
    <string name="company">Company</string>
    <string name="category">Category</string>
    <string name="remaining_stock">Remaining Stock</string>
    <string name="mrp_per_unit">MRP per Unit</string>
    <string name="batch_expire_soon">Batch Expire Soon</string>
    <string name="expire_date">Expire Date</string>
    <string name="shelf_life">Shelf Life</string>
    <string name="current_stock">Current Stock</string>
    <string name="delievered_stock">Delievered Stock</string>
    <string name="undelievered_stock">Undelievered Stock</string>
    <string name="delievered_stock_current_future">Delievered Stock (Current + Future)</string>
    <string name="no_payment_data_found">No Payment Data found</string>
    <string name="no_product_found">No Product found</string>
    <string name="no_order_found">No Order Found</string>
    <string name="no_shops_found">No Shops Found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="share_order">Share Order</string>
</resources>