<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.saleman.ui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_orderListFragment"
            app:destination="@id/orderListFragment" />
        <action
            android:id="@+id/action_nav_home_to_pendingPaymentListFragment"
            app:destination="@id/pendingPaymentListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.saleman.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.saleman.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/shopAddUpdateFragment"
        android:name="com.saleman.ui.fragment.ShopAddUpdateFragment"
        android:label="fragment_shop_details"
        tools:layout="@layout/fragment_add_update_shop" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.saleman.ui.fragment.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.saleman.ui.fragment.SearchResultFragment"
        android:label="SearchResultFragment" />
    <fragment
        android:id="@+id/nav_product_details"
        android:name="com.saleman.ui.fragment.ProductDetailsFragment"
        android:label="fragment_product_details"
        tools:layout="@layout/fragment_product_details" />
    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.saleman.ui.fragment.PendingOrderListFragment"
        android:label="OrderListFragment" />

    <fragment
        android:id="@+id/salesUncoveredShopsFrmment"
        android:name="com.saleman.ui.fragment.SalesUncoveredShopsFragment"
        android:label="UncoveredShopsFragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.saleman.ui.fragment.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.saleman.ui.fragment.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" />
    <fragment
        android:id="@+id/associatedShopsFragment"
        android:name="com.saleman.ui.fragment.AssociatedShopsFragment"
        android:label="fragment_associate_shop"
        tools:layout="@layout/fragment_associate_shop" />
    <fragment
        android:id="@+id/associatedCompaniesFragment"
        android:name="com.saleman.ui.fragment.AssociatedCompaniesFragment"
        android:label="fragment_agency_associate_company"
        tools:layout="@layout/fragment_agency_associate_company" />
    <fragment
        android:id="@+id/agencyDetailsFragment"
        android:name="com.saleman.ui.fragment.AgencyDetailsFragment"
        android:label="fragment_agency_details"
        tools:layout="@layout/fragment_agency_details" />
    <fragment
        android:id="@+id/inventoryFragment"
        android:name="com.saleman.ui.fragment.InventoryFragment"
        android:label="fragment_inverntroy"
        tools:layout="@layout/fragment_inverntroy" />
    <fragment
        android:id="@+id/registerDistributorProcessFragment"
        android:name="com.saleman.ui.fragment.RegisterDistributorProcessFragment"
        android:label="fragment_register_distributor"
        tools:layout="@layout/fragment_register_distributor" />
    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.saleman.ui.fragment.ReviewFragment"
        android:label="fragment_review"
        tools:layout="@layout/fragment_review" />
    <fragment
        android:id="@+id/registerDistributorComplete"
        android:name="com.saleman.ui.fragment.RegisterDistributorComplete"
        android:label="fragment_register_distributor_complete"
        tools:layout="@layout/fragment_register_distributor_complete" />
    <fragment
        android:id="@+id/pendingPaymentListFragment"
        android:name="com.saleman.ui.fragment.PendingPaymentListFragment"
        android:label="fragment_payment_list"
        tools:layout="@layout/fragment_payment_list" />
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.saleman.ui.fragment.ShopsFragment"
        android:label="fragment_sales"
        tools:layout="@layout/fragment_sales" />
    <fragment
        android:id="@+id/addSaleFragment"
        android:name="com.saleman.ui.fragment.ShoapListFragment"
        android:label="fragment_add_sale"
        tools:layout="@layout/fragment_shoap_list" />
    <fragment
        android:id="@+id/operatorFragment"
        android:name="com.saleman.ui.fragment.OperatorFragment"
        android:label="fragment_operator"
        tools:layout="@layout/fragment_operator" />
    <fragment
        android:id="@+id/pastOrderFragment"
        android:name="com.saleman.ui.fragment.PastOrderFragment"
        android:label="fragment_past_order"
        tools:layout="@layout/fragment_past_order" />
    <fragment
        android:id="@+id/specialOfferFragment"
        android:name="com.saleman.ui.fragment.SpecialOfferFragment"
        android:label="fragment_special_offer"
        tools:layout="@layout/fragment_special_offer" />
    <fragment
        android:id="@+id/itemInCartFragment"
        android:name="com.saleman.ui.fragment.ItemInCartFragment"
        android:label="fragment_item_cart"
        tools:layout="@layout/fragment_item_cart" />
    <fragment
        android:id="@+id/browseFragment"
        android:name="com.saleman.ui.fragment.BrowseFragment"
        android:label="fragment_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.saleman.ui.fragment.PaymentFragment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/shopAddUpdateFragmentFirstTime"
        android:name="com.saleman.ui.fragment.ShopAddUpdateFragmentFirstTime"
        android:label="fragment_add_update_shop_firts"
        tools:layout="@layout/fragment_add_update_shop_firts" />


</navigation>